# estoque-b2

./: .gitignore  build.bat  build.spec  index.html  init_data.py  installer.iss  package-lock.json  package.json  publicar_versao.ps1  pytest.ini  requirements.txt  tailwind.config.ts  test_data.py  tsconfig.json  version.py  vitest.config.ts
.claude/: settings.local.json
backend/: main.py
backend/api/: auth_api.py  movements_api.py  products_api.py
backend/utils/: data_loader.py  jwt_handler.py
data/: movements.parquet  order_items.parquet  orders.parquet  products.parquet
desktop/: app.py  auto_updater.py  version_checker.py
desktop/controllers/: backup_controller.py  dashboard_controller.py  movements_controller.py  orders_controller.py  products_controller.py  reports_controller.py
desktop/data/: movements.parquet  order_items.parquet  orders.parquet  products.parquet  settings.json
desktop/ui/: dashboard_window.py  main_window.py  movements_window.py  order_window.py  products_window.py  reports_window.py
mobile/: index.html  script.js  styles.css
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/: db.test.ts  db.ts  pdf.ts  utils.test.ts  utils.ts
src/pages/: Customers.tsx  Dashboard.tsx  Movements.tsx  OrderDetail.tsx  Orders.tsx  Products.tsx  Reports.tsx  Settings.tsx
src/store/: index.ts
src/test/: setup.ts
src/types/: index.ts
tests/: conftest.py  test_controllers.py  test_data_loader.py  test_integration.py
(+13 files in other folders)
